SecurityPOC/force-app/main/default/objects/Training__c/fields/Account_Requiring_Training__c.field-meta.xml
<CustomField>
    <fullName>Account_Requiring_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Requiring Training</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>