SecurityPOC/force-app/main/default/objects/Training__c/fields/Certificate_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expiration_Date__c</fullName>
    <label>Certificate Expiration Date</label>
    <type>Date</type>
</CustomField>