SecurityPOC/force-app/main/default/objects/Training__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>how long will the training last</description>
    <label>Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>