SecurityPOC/force-app/main/default/objects/Training__c/fields/Guard_Assignment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Guard_Assignment_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guard Assignment Eligible?</label>
    <type>Checkbox</type>
</CustomField>