SecurityPOC/force-app/main/default/objects/Training__c/fields/Mandatory_Training__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Training?</label>
    <type>Checkbox</type>
</CustomField>