SecurityPOC/force-app/main/default/objects/Training__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed?</label>
    <type>Checkbox</type>
</CustomField>