SecurityPOC/force-app/main/default/objects/Training__c/fields/Reviewed_by_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by Supervisor?</label>
    <type>Checkbox</type>
</CustomField>