SecurityPOC/force-app/main/default/objects/Training__c/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>who is the guard attending the training</description>
    <label>Trainee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>