SecurityPOC/force-app/main/default/objects/Training__c/fields/Training_Address__c.field-meta.xml
<CustomField>
    <fullName>Training_Address__c</fullName>
    <label>Training Address</label>
    <type>Address</type>
</CustomField>