SecurityPOC/force-app/main/default/objects/Training__c/fields/Training_Provider__c.field-meta.xml
<CustomField>
    <fullName>Training_Provider__c</fullName>
    <label>Training Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allied Universal Training Services</fullName>
            </value>
            <value>
                <fullName>Securitas USA</fullName>
            </value>
            <value>
                <fullName>American Red Cross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>