SecurityPOC/force-app/main/default/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Security Guard Training</fullName>
            </value>
            <value>
                <fullName>Use of Force &amp; De-Escalation Training</fullName>
            </value>
            <value>
                <fullName>First Aid Training</fullName>
            </value>
            <value>
                <fullName>Firearm Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>